Added login middleware, updated User APIs and response codes
