# controllers/User.js
@@ -17,8 +17,9 @@ module.exports.addUser = function addUser (req, res, next) {
 
 module.exports.deleteUser = function deleteUser (req, res, next) {
   var username = req.swagger.params['username'].value;
-  User.deleteUser(username)
+  User.deleteUser(req.session.user, username)
     .then(function (response) {
+      req.session.destroy();
       utils.writeJson(res, response);
     })
     .catch(function (response) {
@@ -60,6 +61,18 @@ module.exports.loginUser = function loginUser (req, res, next) {
     });
 };
 
+module.exports.validateUser = function validateUser (req, res, next) {
+  var user = req.session.user;
+  User.validateUser(user)
+    .then(function (response) {
+      req.session.user = response.payload;
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.logoutUser = function logoutUser (req, res, next) {
   User.logoutUser()
     .then(function (response) {
@@ -74,8 +87,9 @@ module.exports.logoutUser = function logoutUser (req, res, next) {
 module.exports.updateUser = function updateUser (req, res, next) {
   var username = req.swagger.params['username'].value;
   var body = req.swagger.params['body'].value;
-  User.updateUser(username,body)
+  User.updateUser(req.session.user,username,body)
     .then(function (response) {
+      req.session.user = response.payload;
       utils.writeJson(res, response);
     })
     .catch(function (response) {
